example/bao/openbaoui-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.middlewares: example-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/instance: openbaoui
  name: openbao
  namespace: example
spec:
  ingressClassName: traefik
  rules:
  - host: baoui.example.com
    http:
      paths:
      - backend:
          service:
            name: openbao-ui
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - baoui.example.com
    secretName: chart-example-baoui-tls
